--- a/main.css
+++ b/main.css
@@ -1,3 +1,9 @@
+@font-face {
+  font-display: optional;
+  font-family: 'Fira Code';
+  src: url('https://fonts.googleapis.com/css2?family=Fira+Code&display=swap');
+}
+
 body {
    font-family: 'Fira Code', 'Courier New', Courier, monospace;
    min-width: 320px;
@@ -6,6 +12,11 @@ body {
 
 p {
    text-align: justify;
+}
+
+li {
+   margin-top: 0.4em;
+   margin-bottom: 0.4em;
 }
 
 .grid {
